# video-scrubber

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: cmd.rs  main.rs  scrub.rs  select.rs
core/: Cargo.toml
core/src/: fixup.rs  frame.rs  lib.rs  scrub.rs  segments.rs  templates.rs  test.rs  video.rs
core/src/frame/: cpu.rs  gpu.rs
src/: cmd.rs  frame.rs  main.rs  segments.rs  video.rs
src/frame/: cpu.rs  gpu.rs
