[package]
name = "video-scrubber"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
core_affinity = "0.8"
crossbeam-channel = "0.5"
ffmpeg-next = "6"
indicatif = "0.17"
itertools = "0.11"
opencv = { version = "0.84", default-features = false, features = ["clang-runtime", "imgcodecs", "imgproc", "videoio"] }
parking_lot = "0.12"
snmalloc-rs = "0.3"
thread-priority = "0.13"

[profile.release]
lto = "thin"

[features]
cuda = ["opencv/cudaarithm", "opencv/cudaimgproc", "opencv/cudafilters"]
default = ["cuda"]
