[package]
name = "video-scrubber"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "0BSD"
repository = "https://github.com/Absolucy/video-scrubber"

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
itertools = "0.11"
snmalloc-rs = "0.3"
video-scrubber-core = { path = "../core" }
thread-priority = "0.13"
crossbeam-channel = "0.5"
color-eyre = "0.6"
parking_lot = "0.12"
